--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,15 @@
-ROCKSDB_DIR: ./log
-RAFT_LOG_DIR: ./log
-TC_SERVICE_HOST: localhost:9008
-LOCK_SERVICE_HOST: localhost:9009
-TC_NODE_SERVICE_HOST: localhost:8008
-RM_NODE_SERVICE_HOST: localhost:8009
-REDIS_HOST: localhost:6379
-
 # ROCKSDB_DIR: ./log
 # RAFT_LOG_DIR: ./log
-# TC_SERVICE_HOST: mas-tc:9008
-# LOCK_SERVICE_HOST: mas-tc:9009
-# TC_NODE_SERVICE_HOST: mas-tc:8008
-# RM_NODE_SERVICE_HOST: mas-tc:8009
-# REDIS_HOST: mas-redis:6379
+# TC_SERVICE_HOST: localhost:9008
+# LOCK_SERVICE_HOST: localhost:9009
+# TC_NODE_SERVICE_HOST: localhost:8008
+# RM_NODE_SERVICE_HOST: localhost:8009
+# REDIS_HOST: localhost:6379
+
+ROCKSDB_DIR: ./log
+RAFT_LOG_DIR: ./log
+TC_SERVICE_HOST: mas-tc:9008
+LOCK_SERVICE_HOST: mas-tc:9009
+TC_NODE_SERVICE_HOST: mas-tc:8008
+RM_NODE_SERVICE_HOST: mas-tc:8009
+REDIS_HOST: mas-redis:6379
